feat: add 3 months ABC logic (Ядро)